LASB-3907 - implemented validation on stored procedure calls to prevent SQL injection attacks.